--- a/generators/pkg/generator/testdata/pipeline.yaml
+++ b/generators/pkg/generator/testdata/pipeline.yaml
@@ -3,8 +3,8 @@ kind: Pipeline
 metadata:
   creationTimestamp: null
   labels:
-    generator.tekton.dev: build-from-git-repo
-  name: build-from-git-repo
+    generator.tekton.dev: github-build-pipeline
+  name: github-build-pipeline
 spec:
   finally:
   - name: final-set-status
