Add PR event trigger and update the status of commit
Add the github interceptor of pull request event and use the payload of
PR requests to update the status of the commit in the pr.

--- a/generators/pkg/generator/testdata/eventlistener.yaml
+++ b/generators/pkg/generator/testdata/eventlistener.yaml
@@ -19,3 +19,15 @@ spec:
         - ref: github-pipeline-triggerbinding
       template:
         name: github-pipeline-triggertemplate
+    - name: github-pull-request
+      interceptors:
+        - github:
+            secretRef:
+              secretName: github-secret
+              secretKey: secretToken
+            eventTypes:
+              - pull_request
+      bindings:
+        - ref: github-pipeline-triggerbinding
+      template:
+        name: github-pipeline-triggertemplate
