Hub: switch to tekton-hub-preview namespace
Signed-off-by: Sunil Thaha <sthaha@redhat.com>

--- a/hub/api/config/10-db-secret.yaml
+++ b/hub/api/config/10-db-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: db
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
   labels:
     app: db
 type: Opaque
