--- a/hub/api/config/db-migration/14-db-migration.yaml
+++ b/hub/api/config/db-migration/14-db-migration.yaml
@@ -2,7 +2,7 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: db-migration
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
 spec:
   template:
     spec:
