--- a/hub/api/config/13-db-service.yaml
+++ b/hub/api/config/13-db-service.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: db
   name: db
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
 spec:
   type: ClusterIP
   selector:
