--- a/hub/api/config/20-api-secret.yaml
+++ b/hub/api/config/20-api-secret.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: api
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
 type: Opaque
 stringData:
   GITHUB_TOKEN: ''
