--- a/hub/api/config/21-api-deployment.yaml
+++ b/hub/api/config/21-api-deployment.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
   labels:
     app: api
 spec:
