--- a/hub/api/config/22-api-service.yaml
+++ b/hub/api/config/22-api-service.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
-  namespace: tekton-hub
+  namespace: tekton-hub-preview
   labels:
     app: api
 spec:
