--- a/hub/api/config/21-api-deployment.yaml
+++ b/hub/api/config/21-api-deployment.yaml
@@ -21,6 +21,24 @@ spec:
           image: ko://github.com/tektoncd/hub/api/cmd/api
           ports:
             - containerPort: 5000
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 5000
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 5000
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 1
           env:
             - name: POSTGRESQL_HOST
               value: db
