Hub: add readiness and liveness probes
Signed-off-by: Sunil Thaha <sthaha@redhat.com>

--- a/hub/ui/config/11-deployment.yaml
+++ b/hub/ui/config/11-deployment.yaml
@@ -33,3 +33,21 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 1
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 8080
+              scheme: HTTP
+            periodSeconds: 5
+            successThreshold: 1
+            timeoutSeconds: 1
