--- a/hub/ui/config/10-config.yaml
+++ b/hub/ui/config/10-config.yaml
@@ -5,5 +5,5 @@ metadata:
   name: ui
   namespace: tekton-hub-preview
 data:
-  API_URL: 'https://api-tekton-hub.apps-crc.testing'
+  API_URL: 'https://api.hub-preview.tekton.dev'
   GH_CLIENT_ID: ''
