--- a/task-loops/tekton/publish.yaml
+++ b/task-loops/tekton/publish.yaml
@@ -12,6 +12,11 @@ spec:
     description: The vX.Y.Z version that the artifacts should be tagged with (including `v`)
   - name: imageRegistry
     description: The target image registry
+  - name: imageRegistryPath
+    description: The path (project) in the image registry
+  - name: imageRegistryRegions
+    description: The target image registry regions
+    default: "us eu asia"
   - name: releaseAsLatest
     description: Whether to tag and publish this release as Pipelines' latest
   - name: platforms
@@ -32,10 +37,12 @@ spec:
         value: "/workspace/go/src/$(params.package)"
       - name: "PROJECT_ROOT"
         value: "/workspace/go/src/$(params.package)/$(params.subfolder)"
+      - name: CONTAINER_REGISTRY
+        value: "$(params.imageRegistry)/$(params.imageRegistryPath)"
       - name: CONTAINER_REGISTY_CREDENTIALS
         value: "$(workspaces.release-secret.path)/$(params.serviceAccountPath)"
       - name: REGIONS
-        value: "us eu asia"
+        value: "$(params.imageRegistryRegions)"
   steps:
 
   - name: create-ko-yaml
@@ -60,15 +67,15 @@ spec:
       #!/busybox/sh
       set -ex
 
-      # Login to gcr.io
+      # Login to $(params.imageRegistry)
       DOCKER_CONFIG=$(cat ${CONTAINER_REGISTY_CREDENTIALS} | \
-        crane auth login -u _json_key --password-stdin gcr.io 2>&1 | \
+        crane auth login -u _json_key --password-stdin (params.imageRegistry) 2>&1 | \
         sed 's,^.*logged in via \(.*\)$,\1,g')
 
       # Auth with account credentials for all regions.
       for region in ${REGIONS}
       do
-        HOSTNAME=${region}.gcr.io
+        HOSTNAME=${region}.$(params.imageRegistry)
         cat ${CONTAINER_REGISTY_CREDENTIALS} | crane auth login -u _json_key --password-stdin ${HOSTNAME}
       done
       cp ${DOCKER_CONFIG} /workspace/docker-config.json
@@ -77,7 +84,7 @@ spec:
     image: gcr.io/tekton-releases/dogfooding/ko:latest
     env:
     - name: KO_DOCKER_REPO
-      value: $(params.imageRegistry)
+      value: $(params.imageRegistry)/$(params.imageRegistryPath)
     - name: GOPATH
       value: /workspace/go
     - name: GO111MODULE
@@ -129,7 +136,7 @@ spec:
     script: |
       set -ex
 
-      IMAGES_PATH=$(params.imageRegistry)/$(params.package)
+      IMAGES_PATH=${CONTAINER_REGISTRY}/$(params.package)
       if [ "$(params.subfolder)" != "" ]; then
         IMAGES_PATH=${IMAGES_PATH}/$(params.subfolder)
       fi
