--- a/task-loops/tekton/release-pipeline.yaml
+++ b/task-loops/tekton/release-pipeline.yaml
@@ -14,7 +14,9 @@ spec:
   - name: gitRevision
     description: the git revision to release
   - name: imageRegistry
-    default: gcr.io/tekton-nightly
+    default: gcr.io
+  - name: imageRegistryPath
+    description: The path (project) in the image registry
   - name: versionTag
     description: The X.Y.Z version that the artifacts should be tagged with
   - name: releaseBucket
@@ -97,6 +99,8 @@ spec:
           value: $(params.versionTag)
         - name: imageRegistry
           value: $(params.imageRegistry)
+        - name: imageRegistryPath
+          value: $(params.imageRegistryPath)
         - name: releaseAsLatest
           value: $(params.releaseAsLatest)
         - name: platforms
