--- a/pipelines-in-pipelines/tekton/release-pipeline.yaml
+++ b/pipelines-in-pipelines/tekton/release-pipeline.yaml
@@ -64,28 +64,22 @@ spec:
         name: golang-test
       params:
         - name: package
-          value: $(params.package)
-        - name: context
-          value: $(params.subfolder)
-        - name: flags
-          value: -v -mod=vendor
+          value: $(params.package)/$(params.subfolder)
       workspaces:
         - name: source
           workspace: workarea
-          subpath: git
-    - name: build
+          subpath: git/pipelines-in-pipelines
+    - name: build-test
       runAfter: [git-clone]
       taskRef:
         name: golang-build
       params:
         - name: package
-          value: $(params.package)
-        - name: packages
-          value: ./$(params.subfolder)/cmd/...
+          value: $(params.package)/$(params.subfolder)
       workspaces:
         - name: source
           workspace: workarea
-          subpath: git
+          subpath: git/pipelines-in-pipelines
     - name: publish-images
       runAfter: [build, unit-tests]
       taskRef:
