--- a/cel/tekton/release-pipeline.yaml
+++ b/cel/tekton/release-pipeline.yaml
@@ -69,7 +69,7 @@ spec:
         - name: source
           workspace: workarea
           subpath: git/cel
-    - name: build-test
+    - name: build-tests
       runAfter: [git-clone]
       taskRef:
         name: golang-build
@@ -81,7 +81,7 @@ spec:
           workspace: workarea
           subpath: git/cel
     - name: publish-images
-      runAfter: [build, unit-tests]
+      runAfter: [build-tests, unit-tests]
       taskRef:
         name: publish-release
       params:
