[task-loop] update to tektoncd/pipeline v0.24.1

--- a/task-loops/examples/simpletaskloop.yaml
+++ b/task-loops/examples/simpletaskloop.yaml
@@ -33,7 +33,7 @@ spec:
 apiVersion: tekton.dev/v1alpha1
 kind: Run
 metadata:
-  generateName: simpletasklooprun
+  name: simpletasklooprun
 spec:
   params:
     - name: word
