[cloudevents] Add config store to remove dependency on pipeline config
- Add CEConfig which implements Config interface
- Redo NewController function
- Add unit tests for reconciler, config and store

--- a/cloudevents/config/200-role.yaml
+++ b/cloudevents/config/200-role.yaml
@@ -15,4 +15,4 @@ rules:
   - apiGroups: [""]
     resources: ["configmaps"]
     verbs: ["get"]
-    resourceNames: ["config-logging", "config-observability", "config-leader-election"]
+    resourceNames: ["config-logging", "config-observability", "config-leader-election","config-defaults"]
