--- a/cloudevents/config/200-clusterrole.yaml
+++ b/cloudevents/config/200-clusterrole.yaml
@@ -26,4 +26,4 @@ rules:
   # Controller needs permission to emit events associated with Run CRs.
   - apiGroups: [""]
     resources: ["events"]
-    verbs: ["get", "list", "watch"]
+    verbs: ["get", "list", "watch", "create", "update", "delete", "patch"]
