--- a/cloudevents/config/201-clusterrolebinding.yaml
+++ b/cloudevents/config/201-clusterrolebinding.yaml
@@ -1,8 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: tekton-cloudevents-controller
-  namespace: tekton-cloudevents
+  name: tekton-cloudevents-controller-cluster-access
   labels:
     app.kubernetes.io/component: tekton-cloudevents-controller
     app.kubernetes.io/instance: default
@@ -12,6 +11,6 @@ subjects:
     name: tekton-cloudevents-controller
     namespace: tekton-cloudevents
 roleRef:
-  kind: Role
-  name: tekton-cloudevents-controller
+  kind: ClusterRole
+  name: tekton-cloudevents-controller-cluster-access
   apiGroup: rbac.authorization.k8s.io
