--- a/cloudevents/config/201-rolebinding.yaml
+++ b/cloudevents/config/201-rolebinding.yaml
@@ -1,7 +1,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
-  name: tekton-cloudevents-controller-cluster-access
+  name: tekton-cloudevents-controller
+  namespace: tekton-cloudevents
   labels:
     app.kubernetes.io/component: tekton-cloudevents-controller
     app.kubernetes.io/instance: default
@@ -11,6 +12,6 @@ subjects:
     name: tekton-cloudevents-controller
     namespace: tekton-cloudevents
 roleRef:
-  kind: ClusterRole
-  name: tekton-cloudevents-controller-cluster-access
+  kind: Role
+  name: tekton-cloudevents-controller
   apiGroup: rbac.authorization.k8s.io
