--- a/cloudevents/config/config-logging.yaml
+++ b/cloudevents/config/config-logging.yaml
@@ -20,7 +20,7 @@ data:
       "errorOutputPaths": ["stderr"],
       "encoding": "json",
       "encoderConfig": {
-        "timeKey": "",
+        "timeKey": "ts",
         "levelKey": "level",
         "nameKey": "logger",
         "callerKey": "caller",
