--- a/notifiers/github-app/config/rbac.yaml
+++ b/notifiers/github-app/config/rbac.yaml
@@ -1,16 +1,18 @@
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   namespace: tekton-ci
   name: knative-config
 rules:
-- apiGroups: [""]
-  resources: ["configmaps"]
-  resourceNames: ["config-logging", "config-leader-election", "config-observability"]
-  verbs: ["get"]
-- apiGroups: [""]
-  resources: ["configmaps"]
-  verbs: ["list"]
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    resourceNames:
+      ["config-logging", "config-leader-election", "config-observability"]
+    verbs: ["get"]
+  - apiGroups: [""]
+    resources: ["configmaps"]
+    verbs: ["list"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -18,9 +20,8 @@ metadata:
   name: knative-config
   namespace: tekton-ci
 subjects:
-- kind: ServiceAccount
-  name: github-notifier
-  namespace: tekton-ci
+  - kind: ServiceAccount
+    name: github-notifier
 roleRef:
   kind: Role
   name: knative-config
@@ -31,18 +32,26 @@ kind: ClusterRole
 metadata:
   name: tekton-pipeline-ro
 rules:
-- apiGroups: ["tekton.dev"]
-  resources: ["taskruns", "pipelineruns"]
-  verbs: ["list", "get"]
+  - apiGroups: ["tekton.dev"]
+    resources: ["taskruns", "pipelineruns"]
+    verbs: ["list", "get", "patch", "update"]
+  - apiGroups: ["", "metrics.k8s.io", "extensions", "apps"]
+    resources:
+      - "pods/log"
+      - "events"
+      - "nodes"
+      - "pods"
+      - "deployments"
+    verbs: ["list", "get"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: tekton-pipeline-ro
 subjects:
-- kind: ServiceAccount
-  name: github-notifier
-  namespace: tekton-ci
+  - kind: ServiceAccount
+    name: github-notifier
+    namespace: tekton-ci
 roleRef:
   kind: ClusterRole
   name: tekton-pipeline-ro
