--- a/notifiers/github-app/config/rbac.yaml
+++ b/notifiers/github-app/config/rbac.yaml
@@ -35,7 +35,7 @@ rules:
   - apiGroups: ["tekton.dev"]
     resources: ["taskruns", "pipelineruns"]
     verbs: ["list", "get", "patch", "update"]
-  - apiGroups: ["", "metrics.k8s.io", "extensions", "apps"]
+  - apiGroups: [""]
     resources:
       - "pods/log"
       - "pods"
