Add or Update METRICS_DOMAIN to deployment 🍡
knative/pkg based controller and webhook need this environement
variable in order to not panic if metrics are enabled (through a
configmap).

This adds missing values for some of the project, and correct wrong
values for others.

Signed-off-by: Vincent Demeester <vdemeest@redhat.com>

--- a/cloudevents/config/controller.yaml
+++ b/cloudevents/config/controller.yaml
@@ -74,6 +74,8 @@ spec:
         # values in the "configmaps" "get" rule.
         - name: CONFIG_LOGGING_NAME
           value: config-logging
+        - name: METRICS_DOMAIN
+          value: experimental.tekton.dev/cloudevents
       volumes:
         - name: config-logging
           configMap:
