--- a/cel/config/500-controller.yaml
+++ b/cel/config/500-controller.yaml
@@ -60,6 +60,8 @@ spec:
             # values in the "configmaps" "get" rule.
             - name: CONFIG_LOGGING_NAME
               value: config-logging
+            - name: METRICS_DOMAIN
+              value: experimental.tekton.dev/cel
       volumes:
         - name: config-logging
           configMap:
