[pipeline-to-taskrun] Support optional workspace ⚙️
Initially I left this out just to reduce the number of cases I needed to
cover but it was actually pretty easy to add. The functionality will be:
- When an optional workspace is provided, we do the same remapping we do
  for other workspace
- When an optional workspace is not provided, we don't do any remapping
  and just declare the same workspace as optional in the merged Task

I ran into this b/c I was trying to use pipeline to taskrun with the
latest git clone task in the catalog (0.4) which declares an optional
ssh-directory and I was frustrated that it didn't work.

--- a/pipeline-to-taskrun/pkg/reconciler/pipelinetotaskrun/testdata/expected-taskrun.yaml
+++ b/pipeline-to-taskrun/pkg/reconciler/pipelinetotaskrun/testdata/expected-taskrun.yaml
@@ -143,6 +143,8 @@ spec:
       # when the script block is in the middle of the file and absent when at the end of the file
       script: |-
         #!/bin/sh
+        echo "$(workspaces.ssh-directory.bound)"
+
         set -eu -o pipefail
         if [[ "$(params.grab-source-verbose)" == "true" ]] ; then
           set -x
@@ -233,6 +235,8 @@ spec:
     workspaces:
     - name: where-it-all-happens
     - name: gcs-creds
+    - name: ssh-directory
+      optional: true
   workspaces:
   - name: where-it-all-happens
     persistentVolumeClaim:
