[github-notifier] Add missing METRICS_DOMAIN env var

--- a/notifiers/github-app/config/deployment.yaml
+++ b/notifiers/github-app/config/deployment.yaml
@@ -48,6 +48,8 @@ spec:
                   fieldPath: metadata.namespace
             - name: KUBERNETES_MIN_VERSION
               value: 1.18.0
+            - name: METRICS_DOMAIN
+              value: experimental.tekton.dev/github-notifier
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
