Modify pipeline-to-taskrun release pipeline
Replace parameter expansion in build test Task workspace subpath with
hardcoded `pipeline-to-taskrun`

Signed-off-by: Nikhil Thomas <nikthoma@redhat.com>

--- a/pipeline-to-taskrun/tekton/publish.yaml
+++ b/pipeline-to-taskrun/tekton/publish.yaml
@@ -140,7 +140,7 @@ spec:
         IMAGES_PATH=${IMAGES_PATH}/$(params.subfolder)
       fi
 
-      for cmd in controller webhook
+      for cmd in controller
       do
         IMAGES="${IMAGES} ${IMAGES_PATH}/cmd/${cmd}:$(params.versionTag)"
       done
