--- a/commit-status-tracker/bundle/manifests/commit-status-tracker.clusterserviceversion.yaml
+++ b/commit-status-tracker/bundle/manifests/commit-status-tracker.clusterserviceversion.yaml
@@ -21,6 +21,14 @@ spec:
       clusterPermissions:
       - rules:
         - apiGroups:
+          - ""
+          resources:
+          - secrets
+          verbs:
+          - get
+          - list
+          - watch
+        - apiGroups:
           - tekton.dev
           resources:
           - pipelineruns
