[pipeline/trusted-resources]Verify task OCI bundle
This commit will focus on the verification of task oci bundle, since
taskrun and task in cluster may be mutated, we will handle oci bundle
first.

--- a/pipeline/trusted-resources/examples/example-task.yaml
+++ b/pipeline/trusted-resources/examples/example-task.yaml
@@ -1,7 +1,7 @@
 kind: Task
 apiVersion: tekton.dev/v1beta1
 metadata:
-  name: t-3
+  name: example-task
   namespace: tekton-trusted-resources
 spec:
   steps:
