[pipeline/trusted-resources]Change sign and verify target
In this commit, the  webhook will make a copy of taskrun and exclude
system populated fields. And verify on the copied object only on create
operation.

Before this commit, the webhook can only verify on taskspec.

--- a/pipeline/trusted-resources/examples/1-test-taskrun.yaml
+++ b/pipeline/trusted-resources/examples/1-test-taskrun.yaml
@@ -8,6 +8,7 @@ metadata:
   name: tr-1
   namespace: tekton-trusted-resources
 spec:
+  serviceAccountName: examples-sa
   taskSpec:
     steps:
       - image: ubuntu
