--- a/pipeline/trusted-resources/examples/2-test-taskrun-oci-bundle-signed.yaml
+++ b/pipeline/trusted-resources/examples/2-test-taskrun-oci-bundle-signed.yaml
@@ -7,7 +7,7 @@ metadata:
   name: tr-2
   namespace: tekton-trusted-resources
 spec:
-  serviceAccountName: ""
+  serviceAccountName: examples-sa
   taskRef:
     bundle: docker.io/zyx1200/testtask
     name: t-2
