[pipeline-in-pod] Timeouts.Pipeline support
This commit adds support for Timeouts.Pipeline to the ColocatedPipelineRun custom task.
When the timeout is exceeded, the pod is deleted and the ColocatedPipelineRun is marked as failed.

--- a/pipeline-in-pod/examples/inline-pipeline-inline-tasks.yaml
+++ b/pipeline-in-pod/examples/inline-pipeline-inline-tasks.yaml
@@ -9,7 +9,7 @@ spec:
     # metadata: # for labels and annotations
     spec:
       timeouts:
-        pipeline: 5m
+        pipeline: 15s
       params:
       - name: greeting
         value: "Good Morning!"
@@ -21,7 +21,6 @@ spec:
         - name: echo-good-morning
           params:
           - name: greeting
-            type: string
             value: $(params.greeting)
           taskSpec:
             steps:
@@ -30,6 +29,7 @@ spec:
                 script: |
                   #!/usr/bin/env bash
                   echo "$(params.greeting)"
+                  sleep 20
         - name: echo-good-afternoon
           taskSpec:
             steps:
