--- a/workflows/config/el-rbac.yaml
+++ b/workflows/config/el-rbac.yaml
@@ -1,16 +1,17 @@
+# This file defines the SA and its associated roles that is needed by the Workflows EventListener
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: tekton-triggers-example-sa
+  name: tekton-workflows-el-sa
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding # TODO: Use a rolebinding and only create pipelineruns in specific namespaces
+kind: ClusterRoleBinding
 metadata:
-  name: triggers-example-eventlistener-binding
+  name: triggers-workflows-el-binding
 subjects:
-- kind: ServiceAccount
-  name: tekton-triggers-example-sa
-  namespace: default
+  - kind: ServiceAccount
+    name: tekton-workflows-el-sa
+    namespace: tekton-workflows
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -21,11 +22,12 @@ kind: ClusterRoleBinding
 metadata:
   name: triggers-example-eventlistener-clusterbinding
 subjects:
-- kind: ServiceAccount
-  name: tekton-triggers-example-sa
-  namespace: default
+  - kind: ServiceAccount
+    name: tekton-workflows-el-sa
+    namespace: tekton-workflows
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: tekton-triggers-eventlistener-clusterroles
 ---
+
