--- a/workflows/config/rbac.yaml
+++ b/workflows/config/rbac.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: tekton-triggers-example-sa
+  namespace: tekton-workflows
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding # TODO: Use a rolebinding and only create pipelineruns in specific namespaces
@@ -10,7 +11,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: tekton-triggers-example-sa
-  namespace: default
+  namespace: tekton-workflows
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -23,7 +24,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: tekton-triggers-example-sa
-  namespace: default
+  namespace: tekton-workflows
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
