[workflows] Implement filters
This commit adds filters to a workflow definition, which are converted
into ClusterInterceptors on a workflow's Triggers.
This commit adds support for a GitRef filter, which filters events to
those matching a git branch or tag matching a regex, and a custom
filter, which allows a user to specify CEL directly.
A PullRequest filter will be added in a later commit, after support
for GitHub events is implemented.

--- a/workflows/examples/npm-publish.yaml
+++ b/workflows/examples/npm-publish.yaml
@@ -13,17 +13,13 @@ spec:
     event:
       source:
     #     url: https://github.com/dibyom/tkndemo
-      type: "pull_request"
+      type: "push"
       secret:
         secretName: "repo-secret"
         secretKey: "token"
-    interceptors:
-    - name: "only_opened_prs"
-      ref:
-        name: cel
-      params:
-      - name: "filter"
-        value: "body.action in ['opened', 'synchronize', 'reopened']"
+    filters:
+      gitRef:
+        regex: "^main$"
     bindings:
     - name: commit-sha
       value: $(body.pull_request.head.sha)
@@ -54,8 +50,10 @@ spec:
         taskRef:
           name: git-clone
         params:
-        - name: abc
-          value: "$(params.def)"
+        - name: url
+          value: "$(params.url)"
+        - name: revision
+          value: $(params.commit-sha)
         workspaces:
         - name: "output"
           workspace: "source"
