[workflows] POC using flux
Based on https://bigkevmcd.github.io/tekton/flux/notifications/2020/12/06/flux-tekton.html.
Uses Flux GitRepositories to poll for changes to specific branches on linked repos,
Flux Receivers to accept events related to changes to these GitRepositories,
a Flux Provider to turn a Tekton EventListener into a Flux event sink,
and a Flux Alert to connect notifications related to the GitRepositories to the Provider
that forwards to the EventListener. (There may be a simpler way to do this!)

This modifies the workflows API to allow multiple event types per event source,
as this maps more easily to flux event types, and avoids having to duplicate the same
repo just to allow triggering on multiple event types.
Each workflow Trigger's webhook secret is passed to the github receiver.

Benefits:
- don't have to implement connections to git providers

Challenges:
- Flux bootstrapping requires providing credentials to allow Flux to create a repo
in your git provider org
- Flux GitRepository is meant to watch changes to a branch, so it's not well suited
for CI, and it accepts only a branch name rather than a regex that could be a branch,
tag, or commit
- CEL filters now need to be rewritten in terms of the Flux event body instead of
an event body from Github or elsewhere.
- I'm not aware of a way to use informers/listers with Flux objects.
- (maybe) some Flux objects may need to live in the "flux-system" namespace, so they
cannot have the workflow as their owner ref

Potential challenge or benefit:
- Flux GitRepository polls for changes to the GitRepository, so it takes some time
to generate a notification after a change, but it doesn't require creating an ingress
for a webhook.

--- a/workflows/config/201-clusterrole.yaml
+++ b/workflows/config/201-clusterrole.yaml
@@ -31,6 +31,15 @@ rules:
   - apiGroups: ["coordination.k8s.io"]
     resources: ["leases"]
     verbs: ["get", "list", "create", "update", "delete", "patch", "watch"]
+  - apiGroups: [""]
+    resources: ["events"]
+    verbs: ["create", "update", "patch"]
+  - apiGroups: ["source.toolkit.fluxcd.io"]
+    resources: ["gitrepositories"]
+    verbs: ["create", "update", "patch", "delete", "get", "watch"]
+  - apiGroups: ["notification.toolkit.fluxcd.io"]
+    resources: ["receivers", "providers", "alerts"]
+    verbs: ["create", "update", "patch", "delete", "get", "watch"]
 ---
 kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
