--- a/pipelines-in-pipelines/examples/run-with-pipeline-with-results.yaml
+++ b/pipelines-in-pipelines/examples/run-with-pipeline-with-results.yaml
@@ -17,12 +17,12 @@ spec:
             script: |
               echo -n "Hello World!" > $(results.message.path)
 ---
-apiVersion: tekton.dev/v1alpha1
-kind: Run
+apiVersion: tekton.dev/v1beta1
+kind: CustomRun
 metadata:
   generateName: piprun-
 spec:
-  ref:
+  customRef:
     apiVersion: tekton.dev/v1beta1
     kind: Pipeline
     name: hello-world
