--- a/pipelines-in-pipelines/examples/run-with-pipeline.yaml
+++ b/pipelines-in-pipelines/examples/run-with-pipeline.yaml
@@ -13,12 +13,12 @@ spec:
               #!/usr/bin/env bash
               echo "Hello World!"
 ---
-apiVersion: tekton.dev/v1alpha1
-kind: Run
+apiVersion: tekton.dev/v1beta1
+kind: CustomRun
 metadata:
   generateName: piprun-
 spec:
-  ref:
+  customRef:
     apiVersion: tekton.dev/v1beta1
     kind: Pipeline
     name: hello-world
